# backend/src/routes/auth.ts
@@ -3,7 +3,6 @@ import { body, param } from 'express-validator';
 
 import validationError from '../middleware/validationError';
 import * as authController from '../controllers/auth';
-import isRefresh from '../middleware/is-refresh';
 import isAuth from '../middleware/is-auth';
 
 const router = express.Router();
@@ -13,13 +12,11 @@ router.post(
     [
         body('username')
             .trim()
-            .escape()
             .isLength({ max: 50 })
             .notEmpty()
             .isString(),
         body('password')
             .trim()
-            .escape()
             .isLength({ max: 250 })
             .notEmpty()
             .isString(),
@@ -28,19 +25,17 @@ router.post(
     authController.login
 );
 
-router.post('/refresh', isRefresh, authController.refreshToken);
+router.post('/refresh', [body('refreshToken').trim().isJWT()], authController.refreshToken);
 
 router.post(
     '/register',
     [
         body('username')
             .trim()
-            .escape()
             .isLength({ min: 4, max: 50 })
             .isString(),
         body('password')
             .trim()
-            .escape()
             .isLength({ min: 8, max: 250 })
             .isStrongPassword({
                 minLength: 8,
@@ -50,7 +45,7 @@ router.post(
                 minSymbols: 0,
             })
             .isString(),
-        body('email').trim().escape().isLength({ max: 320 }).isEmail(),
+        body('email').trim().isLength({ max: 320 }).isEmail(),
     ],
     validationError,
     authController.registerAccount
@@ -58,7 +53,7 @@ router.post(
 
 router.post(
     '/confirm/:uuid',
-    [param('uuid').trim().escape().isUUID('4').notEmpty()],
+    [param('uuid').trim().isUUID('4').notEmpty()],
     validationError,
     authController.confirmAccount
 );
@@ -69,19 +64,16 @@ router.put(
     [
         body('username')
             .trim()
-            .escape()
             .isLength({ max: 50 })
             .notEmpty()
             .isString(),
         body('password')
             .trim()
-            .escape()
             .isLength({ max: 250 })
             .notEmpty()
             .isString(),
         body('newPassword')
             .trim()
-            .escape()
             .isLength({ max: 250 })
             .isStrongPassword({
                 minLength: 8,
@@ -102,13 +94,11 @@ router.post(
     [
         body('username')
             .trim()
-            .escape()
             .isLength({ max: 50 })
             .notEmpty()
             .isString(),
         body('password')
             .trim()
-            .escape()
             .isLength({ max: 250 })
             .notEmpty()
             .isString(),
